--- a/client/src/pages/Events/Events.module.sass
+++ b/client/src/pages/Events/Events.module.sass
@@ -2,73 +2,60 @@
 *
     box-sizing: border-box
 
+.eventsPageContainer
+    display: flex
+    flex-direction: row
+    padding: 100px
 
-
-.events
-    width: 600px
-    height: 380px
-    margin: 0 auto
-    padding: 20px 30px
-    margin-top: 35px
-    border: 2px solid #e7e6e6
-
-    .eventHeader
+    .aside
+        margin-right: 40px
         display: flex
-        justify-content: space-between
-        align-items: center
-        border-bottom: 1px solid #eeeaea
+        flex-direction: column
+        align-items: flex-start
+        justify-content: flex-start
+        box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1)
+        @media(max-width: 800px)
+            align-self: stretch
+            margin-right: 0
+            margin-bottom: 15px
 
-        .remainingTime
+    .headerAside
+        align-self: stretch
+        font-size: 18px
+        padding: 20px 26px
+        background-color: #f3f3f3
+        font-weight: 500
+
+    .optionsContainer
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+        justify-content: flex-start
+        align-self: stretch
+        padding: 15px 0
+        margin-bottom: 10px
+        width: 90%
+        margin: 0 auto
+
+        .optionContainer
+            border-radius: 8px
+            margin-top: 5px
+            cursor: pointer
+            color: #455a89
+            font-size: 16px
+            font-weight: 600
+            padding: 14px 58px
+            align-self: stretch
+            @media(max-width: 800px)
+                text-align: center
+
+                &:hover
+                background-color: #455a89
+                color: white
+
+        .currentOption
+            background-color: #455a89
+            color: white
             display: flex
-            justify-content: space-between
             align-items: center
-            font-weight: 500
-            font-size: 14px
-
-            img
-                width: 30px
-                margin-left: 5px     
-    
-    p
-        font-size: 20px
-        color: black
-
-    .eventForm::-webkit-scrollbar
-        width: 5px
-        height: 8px
-
-    .eventForm::-webkit-scrollbar-thumb
-        background-color: grey
-        border-radius: 5px
-
-    .eventForm::-webkit-scrollbar-track
-        background-color: #eeeaea
-        border-radius: 5px
-
-    .eventForm
-        overflow-y: scroll
-        height: 270px
-        margin-top: 10px
-        padding-right: 15px
-
-        p
-            border: none
-
-        .eventElement + .eventElement
-            margin-top: 10px
-
-        .eventElement
-            display: flex
-            justify-content: space-between
-            padding: 5px 15px 5px 15px
-            width: 100%
-            height: 45px
-            align-items: center
-            border-radius: 5px
-            overflow: hidden
-            background-color: #e0dcdc
-            color: black
-
-            .eventInfo
-                font-size: 20px
-
+            justify-content: center
